# Device-stats

./: build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/lukasanda/devicestats/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/lukasanda/devicestats/: App.kt  MainActivity.kt
app/src/main/res/layout/: notification__custom.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/lukasanda/devicestats/: ExampleUnitTest.kt
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: Libs.kt
devicestats/: build.gradle.kts
devicestats/src/androidTest/java/com/lukasanda/devicestats/: ExampleInstrumentedTest.kt
devicestats/src/main/: AndroidManifest.xml
devicestats/src/main/java/com/lukasanda/devicestats/: DeviceStats.kt  LibraryNotInitializedException.kt
devicestats/src/main/java/com/lukasanda/devicestats/models/: CPUData.kt  RAMData.kt  StorageData.kt
devicestats/src/main/java/com/lukasanda/devicestats/providers/: BaseProvider.kt  CPUDataProvider.kt  RAMDataProvider.kt
gradle/wrapper/: gradle-wrapper.properties
nativecpuinfo/: build.gradle.kts
nativecpuinfo/src/androidTest/java/com/lukasanda/nativecpuinfo/: ExampleInstrumentedTest.kt
nativecpuinfo/src/main/: AndroidManifest.xml
nativecpuinfo/src/main/cpp/: CMakeLists.txt  nativecpuinfo.cpp
nativecpuinfo/src/main/java/com/lukasanda/nativecpuinfo/: NativeCPUInfo.kt
nativecpuinfo/src/test/java/com/lukasanda/nativecpuinfo/: ExampleUnitTest.kt
(+1 files in other folders)
